<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegisterActivity"
    android:overScrollMode="never"
    android:scrollbars="none">
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <ImageView
            android:layout_width="200dp"
            android:layout_height="200dp"
            android:layout_gravity="center"
            android:src="@drawable/logo"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_stazer_now_start_with_verification"
            android:fontFamily="@font/stazer_trocchi_font"
            android:textSize="22sp"
            android:gravity="center"
            android:textColor="@color/TextPrimary"/>
        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/we_will_send_you_an_one_time_password_on_this_mobile_number"
            android:fontFamily="@font/stazer_trocchi_font"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/TextPrimary"
            android:layout_marginBottom="15dp"/>
<LinearLayout
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="horizontal"
    android:gravity="center"
    >
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:gravity="center"
        android:textColor="@color/TextPrimary"
        android:text="@string/country_code"
        android:textStyle="bold"
        android:textSize="16sp"/>
    <EditText
        android:id="@+id/inputMobile"
        android:layout_width="wrap_content"
        android:layout_height="40dp"
        android:hint="@string/enter_your_mobile_number"
        android:importantForAutofill="no"
        android:imeOptions="actionDone"
        android:background="@null"
        android:inputType="number"
        android:textColor="@color/TextPrimary"
        android:textSize="16sp"
        />
</LinearLayout>
<View
    android:layout_width="match_parent"
    android:layout_height="2dp"
    android:layout_marginStart="70dp"
    android:layout_marginEnd="70dp"
    android:layout_marginTop="8dp"
    android:background="@color/colorDivider"/>

    </LinearLayout>
 <FrameLayout
     android:layout_width="match_parent"
     android:layout_height="wrap_content">
     <Button
         android:id="@+id/btn_getOTP"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:layout_margin="30dp"
         android:padding="14dp"
         android:background="@drawable/background_button"
         android:text="@string/continue_text_btn"
         android:textSize="18sp"
         android:textColor="@color/colorWhite" />

     <ProgressBar
         android:id="@+id/progress_bar"
         android:layout_width="40dp"
         android:layout_height="40dp"
         android:layout_gravity="center"
         android:visibility="gone"/>
 </FrameLayout>
</LinearLayout>
</ScrollView>