<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorWhite"
    android:overScrollMode="never"
    android:scrollbars="none"
    tools:context=".UserRegistrationActivity">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/let_s_start_with_creating_your_account"
            android:textColor="@color/TextPrimary"
            android:fontFamily="@font/stazer_trocchi_font"
            android:textSize="22sp"
            android:padding="14dp"
            android:layout_marginBottom="16dp"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            >
            <EditText
                android:id="@+id/edit_first_name"
                android:hint="@string/first_name"
                android:textSize="20sp"
                android:textColor="@color/TextPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"/>
            <EditText
                android:id="@+id/edit_last_name"
                android:hint="@string/last_name"
                android:textSize="20sp"
                android:textColor="@color/TextPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/edit_mobile_number"
            android:hint="@string/mobile_number"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/TextPrimary"
           android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
           />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="15dp"
            android:weightSum="2"
            >
            <EditText
                android:id="@+id/edit_house_no"
                android:hint="House/Flat No (ex - 4-h-9)"
                android:textSize="20sp"
                android:textColor="@color/TextPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginEnd="4dp"/>
            <EditText
                android:id="@+id/edit_Area"
                android:hint="Area (ex- Rangbari Yojana)"
                android:textSize="20sp"
                android:textColor="@color/TextPrimary"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_marginStart="4dp"/>
        </LinearLayout>
        <EditText
            android:id="@+id/edit_landmark"
            android:hint="Landmark (for ex - Near Nandwana Hosptial)"
            android:textSize="20sp"
            android:layout_marginTop="15dp"
            android:textColor="@color/TextPrimary"
            android:background="@null"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />
    </LinearLayout>
    <View
        android:layout_width="match_parent"
        android:layout_height="2dp"
        android:layout_marginStart="4dp"
        android:layout_marginEnd="4dp"
        android:layout_marginTop="8dp"
        android:background="@color/colorDivider"/>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <Button
            android:id="@+id/btn_user_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="140dp"
            android:layout_marginStart="12dp"
            android:layout_marginEnd="12dp"
            android:padding="14dp"
            android:background="@drawable/background_button"
            android:text="@string/save_btn"
            android:textSize="18sp"
            android:textColor="@color/colorWhite" />


    </FrameLayout>
</LinearLayout>
</ScrollView>