<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".services.geyser.GeyserActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="8dp"
        android:orientation="vertical"
        android:padding="5dp">
        <!-- Top Layout -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/geyser_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                android:padding="8dp"
                android:text="Geyser Services"
                android:textColor="@color/TextPrimary"
                android:textSize="22sp" />

            <RatingBar
                android:id="@+id/geyser_rating"
                style="@style/Widget.AppCompat.RatingBar.Small"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:layout_toEndOf="@+id/geyser_text"
                android:rating="4.5" />

            <View
                android:layout_width="match_parent"
                android:layout_height="2dp"
                android:layout_below="@+id/geyser_text"
                android:layout_marginStart="12dp"
                android:layout_marginEnd="40dp"
                android:background="@color/colorDivider" />

        </RelativeLayout>

        <!-- Header close -->

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scrollbars="none">
            <!-- main Scroll start -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <!-- Layout second -->
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="130dp"
                    android:layout_gravity="center"
                    android:layout_marginTop="16dp"
                    android:gravity="center"
                    android:padding="8dp">
                    <!--Basic Rate card -->
                    <androidx.cardview.widget.CardView
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_margin="8dp"
                        app:cardCornerRadius="8dp"
                        app:cardElevation="12dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent"
                            android:background="@color/colorCardBlue"
                            android:padding="10dp">

                            <TextView
                                android:id="@+id/cardTitleGeyser"
                                android:layout_width="match_parent"
                                android:layout_height="wrap_content"
                                android:gravity="center"
                                android:text="@string/charge_for_basic_geyser_services"
                                android:textColor="@color/colorWhite"
                                android:textSize="16sp" />

                            <TextView
                                android:id="@+id/rate_geyser"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@+id/cardTitleGeyser"
                                android:layout_marginStart="25dp"
                                android:padding="8dp"
                                android:layout_marginTop="4dp"
                                android:textColor="@color/colorWhite"
                                android:textSize="14sp" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>
                </RelativeLayout>
                <!-- Third Layout -->
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp"
                        android:padding="8dp">

                        <TextView
                            android:id="@+id/noticeRates"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:gravity="center"
                            android:text="@string/notice_rates"
                            android:textColor="@color/TextPrimary"
                            android:textSize="14sp" />

                        <Button
                            android:id="@+id/geyser_RateCard"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/noticeRates"
                            android:layout_alignParentEnd="true"
                            android:background="@null"
                            android:elevation="16dp"
                            android:text="@string/view_rate_card" />

                        <View
                            android:layout_width="match_parent"
                            android:layout_height="2dp"
                            android:layout_below="@+id/geyser_RateCard"
                            android:layout_marginStart="260dp"
                            android:layout_marginEnd="4dp"
                            android:background="@color/colorDivider" />

                        <TextView
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:layout_below="@+id/geyser_RateCard"
                            android:layout_marginStart="12dp"
                            android:layout_marginTop="16dp"
                            android:gravity="center"
                            android:padding="16dp"
                            android:text="@string/book_your_service_or_schedule_your_service_on_one_click"
                            android:textColor="@color/TextPrimary"
                            android:textSize="12sp" />
                    </RelativeLayout>

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:padding="8dp"
                        android:text="@string/no_hidden_charges_taking_by_us"
                        android:textColor="@color/TextPrimary"
                        android:textSize="8sp" />

                    <Button
                        android:id="@+id/btn_book_geyser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginEnd="30dp"
                        android:background="@drawable/background_button"
                        android:padding="14dp"
                        android:text="@string/book_now"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/scheduleServiceGeyser"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="30dp"
                        android:layout_marginTop="20dp"
                        android:layout_marginEnd="30dp"
                        android:layout_marginBottom="30dp"
                        android:background="@drawable/background_button"
                        android:padding="14dp"
                        android:text="@string/schedule_service"
                        android:textColor="@color/colorWhite"
                        android:textSize="18sp" />
                </LinearLayout>
            </LinearLayout>
        </ScrollView>
        <!-- Scroll close -->

    </LinearLayout>
</RelativeLayout>