<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:scrollbars="none"
    android:overScrollMode="never"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOtpActivity">
<LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:padding="16dp"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:orientation="vertical">
    <ImageView
        android:layout_width="200dp"
        android:layout_height="200dp"
        android:layout_gravity="center"
        android:src="@drawable/logo"/>
        <TextView
            android:layout_marginTop="15dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/welcome_to_stazer_now_start_with_verification"
            android:fontFamily="@font/stazer_trocchi_font"
            android:textSize="20sp"
            android:gravity="center"
            android:textColor="@color/TextPrimary"/>
        <TextView
            android:layout_marginTop="12dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/enter_the_otp_sent_to"
            android:fontFamily="@font/stazer_trocchi_font"
            android:textSize="14sp"
            android:gravity="center"
            android:textColor="@color/TextPrimary"
            android:layout_marginBottom="15dp"/>
        <TextView
            android:id="@+id/textMobile"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="4dp"
            android:layout_marginStart="50dp"
            android:layout_marginEnd="50dp"
            android:gravity="center"
            android:textColor="@color/TextPrimary"
            android:textSize="14sp"
            android:textStyle="bold"/>
        <LinearLayout
            android:layout_marginTop="30dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:orientation="horizontal">
            <EditText
                android:id="@+id/inputCode1"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimary"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode2"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimary"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode3"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimary"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode4"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimary"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode5"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionNext"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimary"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor"
                />
            <EditText
                android:id="@+id/inputCode6"
                android:layout_width="40dp"
                android:layout_height="50dp"
                android:gravity="center"
                android:imeOptions="actionDone"
                android:importantForAutofill="no"
                android:inputType="number"
                android:maxLength="1"
                android:textColor="@color/TextPrimary"
                android:textStyle="bold"
                android:textSize="24sp"
                tools:ignore="LabelFor" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:gravity="center">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/didn_t_receive_the_otp"
                android:textColor="@color/TextSecondary"
                android:textSize="14sp"/>
            <TextView
                android:id="@+id/textResendOtp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/resend_otp"
                android:layout_marginStart="8dp"
                android:textColor="@color/colorAccent"
                android:textSize="15sp"
                android:textStyle="bold"/>
        </LinearLayout>
    </LinearLayout>
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
    <Button
        android:id="@+id/btn_verify"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:padding="14dp"
        android:background="@drawable/background_button"
        android:text="@string/verify_btn"
        android:textSize="18sp"
        android:textColor="@color/colorWhite" />
        <ProgressBar
            android:id="@+id/progressBar"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_gravity="center"
            android:visibility="gone"/>
    </FrameLayout>
</LinearLayout>
</ScrollView>